@@ -10,7 +10,6 @@ import com.example.da_sentrip.repository.DataSourceRepository;
 import com.example.da_sentrip.repository.EmployeeRepository;
 import com.example.da_sentrip.repository.UserRepository;
 import com.example.da_sentrip.service.EmployeeService;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.security.authentication.BadCredentialsException;
@@ -19,7 +18,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.lang.module.ResolutionException;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,62 +31,59 @@ public class EmployeeServiceImpl implements EmployeeService {
 
     @Override
     public EmployeeDTO create(EmployeeRequestDTO request, String gmail) {
-        userRepository.findByGmail(gmail).orElseThrow(() -> new BadCredentialsException("gmail not found"));
+        userRepository.findByGmail(gmail)
+                .orElseThrow(() -> new BadCredentialsException("Gmail not found"));
         return new EmployeeDTO(modelMapper.map(request, Employee.class));
     }
 
     @Override
     public EmployeeDTO update(Long id, EmployeeRequestDTO request, MultipartFile img) {
-        Employee emp = employeeRepository.findById(id).orElseThrow(() -> new RuntimeException("Employee not found"));
+        Employee emp = employeeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Employee not found"));
         modelMapper.map(request, emp);
         if (img != null && !img.isEmpty()) {
-            if (emp.getImg() != null && emp.getImg().matches("\\d+")) {
+            if (emp.getImg() != null && emp.getImg().matches("\\d+"))
                 mediaStorageService.deleteMedia(Long.valueOf(emp.getImg()));
-            }
-            String newDsId = mediaStorageService.uploadMedia(img);
-            emp.setImg(newDsId);
+            emp.setImg(mediaStorageService.uploadMedia(img));
         }
-        employeeRepository.save(emp);
-        return new EmployeeDTO(emp);
+        return new EmployeeDTO(employeeRepository.save(emp));
     }
 
     @Override
     public void delete(Long id) {
-        Employee employee = employeeRepository.findById(id).orElseThrow(() -> new BadCredentialsException("ID not found"));
-        String img = employee.getImg();
-        if (img != null && img.matches("\\d+")) {
-            Long imgId = Long.parseLong(img);
-            dataSourceRepository.findById(imgId).ifPresent(data -> mediaStorageService.deleteMedia(imgId));
+        Employee emp = employeeRepository.findById(id)
+                .orElseThrow(() -> new BadCredentialsException("ID not found"));
+        if (emp.getImg() != null && emp.getImg().matches("\\d+")) {
+            Long imgId = Long.parseLong(emp.getImg());
+            dataSourceRepository.findById(imgId).ifPresent(d -> mediaStorageService.deleteMedia(imgId));
         }
-
         employeeRepository.deleteById(id);
     }
 
     @Override
     public List<EmployeeDTO> getdetailis(Long id) {
-        Employee employee = employeeRepository.findById(id).orElseThrow(() -> new ResolutionException("ID not found"));
-        return Collections.singletonList(new EmployeeDTO(employee));
+        Employee emp = employeeRepository.findById(id)
+                .orElseThrow(() -> new ResolutionException("ID not found"));
+        return Collections.singletonList(new EmployeeDTO(emp));
     }
 
     @Override
     public List<EmployeeDTO> search(String fullName, String address, String mnv) {
-        return employeeRepository.findBySearch(fullName, address, mnv).stream().map(EmployeeDTO::new).collect(Collectors.toList());
+        return employeeRepository.findBySearch(fullName, address, mnv)
+                .stream().map(EmployeeDTO::new).toList();
     }
 
     @Override
     public List<EmployeeReponseDTO> getAll() {
-        return employeeRepository.findAll().stream().map(employee -> {
-            User user = employee.getUser();
-            EmployeeReponseDTO dto = new EmployeeReponseDTO(employee,user);
-            if (user != null && user.getRole() != null) {
+        return employeeRepository.findAll().stream().map(emp -> {
+            User user = emp.getUser();
+            EmployeeReponseDTO dto = new EmployeeReponseDTO(emp, user);
+            if (user != null && user.getRole() != null)
                 dto.setRole(user.getRole().getRoleName());
-            }
-                    if (employee.getImg() != null && employee.getImg().matches("\\d+")) {
-                        dataSourceRepository.findById(Long.valueOf(employee.getImg())).ifPresent(ds -> {
-                        dto.setImg(ds.getImageUrl());
-                        });
-                    }
-                    return dto;
-                }).toList();
+            if (emp.getImg() != null && emp.getImg().matches("\\d+"))
+                dataSourceRepository.findById(Long.valueOf(emp.getImg()))
+                        .ifPresent(ds -> dto.setImg(ds.getImageUrl()));
+            return dto;
+        }).toList();
     }
 }
