@@ -15,11 +15,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-
 public class MerchantServiceImpl implements MerchantService {
 
     private final MerchantRepository merchantRepository;
@@ -29,51 +27,49 @@ public class MerchantServiceImpl implements MerchantService {
 
     @Override
     public MerchantDTO update(Long id, MerchantRequestDTO request, MultipartFile img) {
-        Merchant merchant =merchantRepository.findById(id).orElseThrow(()-> new BadCredentialsException("ID not Found"));
-        modelMapper.map(request,Merchant.class);
-        if (img!=null && img.isEmpty()){
-            if(merchant.getImg()!=null && merchant.getImg().matches("\\d+")){
+        Merchant merchant = merchantRepository.findById(id)
+                .orElseThrow(() -> new BadCredentialsException("ID not Found"));
+        modelMapper.map(request, Merchant.class);
+        if (img != null && !img.isEmpty()) {
+            if (merchant.getImg() != null && merchant.getImg().matches("\\d+"))
                 mediaStorageService.deleteMedia(Long.valueOf(merchant.getImg()));
-            }
-            String imgID=mediaStorageService.uploadMedia(img);
-            merchant.setImg(imgID);
+            merchant.setImg(mediaStorageService.uploadMedia(img));
         }
-        merchantRepository.save(merchant);
-        return new MerchantDTO(merchant);
+        return new MerchantDTO(merchantRepository.save(merchant));
     }
 
     @Override
     public MerchantDTO delete(Long id) {
-        Merchant merchant=merchantRepository.findById(id).orElseThrow(()-> new BadCredentialsException("ID not found"));
-        if(merchant.getImg()!=null && merchant.getImg().isBlank()){
-            Long imgID =Long.parseLong(merchant.getImg());
-            dataSourceRepository.findById(imgID).ifPresent(data -> mediaStorageService.deleteMedia(imgID));
+        Merchant merchant = merchantRepository.findById(id)
+                .orElseThrow(() -> new BadCredentialsException("ID not found"));
+        if (merchant.getImg() != null && merchant.getImg().matches("\\d+")) {
+            Long imgId = Long.parseLong(merchant.getImg());
+            dataSourceRepository.findById(imgId).ifPresent(d -> mediaStorageService.deleteMedia(imgId));
         }
         return new MerchantDTO(merchant);
     }
 
     @Override
     public List<MerchantDTO> getdetailis(Long id) {
-        Merchant merchant=merchantRepository.findById(id).orElseThrow(() -> new BadCredentialsException("ID not found"));
+        Merchant merchant = merchantRepository.findById(id)
+                .orElseThrow(() -> new BadCredentialsException("ID not found"));
         return Collections.singletonList(new MerchantDTO(merchant));
     }
 
     @Override
     public List<MerchantDTO> search(String merchantName, String address, String businessLicense) {
-        return merchantRepository.findBySearch(merchantName,address,businessLicense).stream().map(MerchantDTO::new).collect(Collectors.toList());
+        return merchantRepository.findBySearch(merchantName, address, businessLicense)
+                .stream().map(MerchantDTO::new).toList();
     }
 
     @Override
     public List<MerchantReponseDTO> getAll() {
         return merchantRepository.findAll().stream().map(merchant -> {
-            MerchantReponseDTO  dto = new MerchantReponseDTO(merchant);
-            if (merchant.getImg() != null && merchant.getImg().matches("\\d+")) {
-                dataSourceRepository.findById(Long.valueOf(merchant.getImg())).ifPresent(ds -> {
-                    dto.setImg(ds.getImageUrl());
-                });
-            }
+            MerchantReponseDTO dto = new MerchantReponseDTO(merchant);
+            if (merchant.getImg() != null && merchant.getImg().matches("\\d+"))
+                dataSourceRepository.findById(Long.valueOf(merchant.getImg()))
+                        .ifPresent(ds -> dto.setImg(ds.getImageUrl()));
             return dto;
         }).toList();
-
     }
 }
